--- a/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
+++ b/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
@@ -33,8 +33,8 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{tabularx}
-\usepackage{listings}
 \usepackage{enumerate}
+\usepackage{float}
 
 \renewcommand{\UrlFont}{\footnotesize}
 
@@ -44,18 +44,69 @@
 	\renewcommand{\bibname}{Sitografia}
 }
 
-\lstset{
-	extendedchars=true,
-	basicstyle=\footnotesize\ttfamily,
-	showstringspaces=false,
-	showspaces=false,
-	numbers=left,
-	numberstyle=\footnotesize,
-	numbersep=9pt,
-	tabsize=2,
-	breaklines=true,
-	showtabs=false,
-	captionpos=b
+
+\usepackage{xcolor}
+\usepackage{listings}
+
+\renewcommand{\lstlistingname}{Listato} % Listing -> Listato
+
+\definecolor{mygreen}{rgb}{0,0.6,0}
+\definecolor{mygray}{rgb}{0.5,0.5,0.5}
+\definecolor{mymauve}{rgb}{0.58,0,0.82}
+
+\definecolor{lightgray}{rgb}{.9,.9,.9}
+\definecolor{darkgray}{rgb}{.4,.4,.4}
+\definecolor{purple}{rgb}{0.65, 0.12, 0.82}
+
+
+\lstdefinelanguage{Node}{
+	keywords={do, if, in, for, let, new, try, var, case, else, eval, null, this, true, void, with, await, break, catch, class, const, false, super, throw, while, yield, delete, export, import, public, return, static, switch, typeof, extends, finally, package, private, continue, debugger, function, arguments, interface, protected, implements, instanceof
+	},
+	morecomment=[l]{//},
+	morecomment=[s]{/*}{*/},
+	morestring=[b]',
+	morestring=[b]",
+	ndkeywords=
+	{
+		class, 
+		export, 
+		boolean, 
+		throw, 
+		implements, 
+		import, 
+		this,
+		console,
+		\_\_dirname,
+		locals,
+		message,
+		require,
+		type, 
+		required, 
+		trim, 
+		uppercase, 
+		lowercase,
+		enum,
+		default,
+		exports,
+		\$eq,
+		\_id,
+	},
+	keywordstyle=\color{cyan}\bfseries,
+	ndkeywordstyle=\color{red}\bfseries,
+	identifierstyle=\color{black},
+	commentstyle=\color{mygreen}\ttfamily,
+	stringstyle=\color{mymauve}\ttfamily,
+	sensitive=true
+}
+
+\lstdefinelanguage{JavaScript}{
+	keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, const, let, async, await, if, in, while, do, else, case, break, from},
+	ndkeywords={class, export, boolean, throw, implements, import, this},
+	sensitive=false,
+	comment=[l]{//},
+	morecomment=[s]{/*}{*/},
+	morestring=[b]',
+	morestring=[b]"
 }
 
 \newcommand\blankpage{%
@@ -75,6 +126,7 @@
 %			TITOLO
 %
 \begin{document}
+	
 
 \title{Sistema Accessi IoT}
 \author{Andrei CIULPAN}
@@ -110,7 +162,7 @@ Il controllo accessi\cite{controllo_accessi} è un tema molto sviluppato nel cam
 
 La tesi si propone di trattare un sistema ibrido in cui il mondo fisico e il mondo informatico lavorano insieme: attraverso sensori ed attuatori è possibile avere la comunicazione tra i due mondi. 
 
-Si tratta di un sistema IoT (Internet of Things), ovvero un sistema in cui la connessione Internet viene estesa anche al mondo degli oggetti fisici (smart objects\cite{smart_objects}) di uso comune. Gli oggetti si rendono riconoscibili e \textquotedblleft{} acquisiscono intelligenza \textquotedblright{} grazie al fatto di possedere una o più delle seguenti funzionalità: identificazione, localizzazione, diagnosi di stato, interazione con l'ambiente circostante, elaborazione dati e ovviamente connessione.
+Si tratta di un sistema \emph{Internet of Things} (IoT), ovvero un sistema in cui la connessione Internet viene estesa anche al mondo degli oggetti fisici (smart objects\cite{smart_objects}) di uso comune. Gli oggetti si rendono riconoscibili e \textquotedblleft{} acquisiscono intelligenza \textquotedblright{} grazie al fatto di possedere una o più delle seguenti funzionalità: identificazione, localizzazione, diagnosi di stato, interazione con l'ambiente circostante, elaborazione dati e ovviamente connessione.
 Gli oggetti intelligenti di un sistema IoT sono normalmente dotati di un processore embedded, sensori e attuatori e sono in grado di agire sui dati raccolti dall'ambiente e, ancora più importante, mandare questi dati in rete dove possono poi essere analizzati\cite{IoT}. Un semplice esempio di un sistema IoT si può trovare nella Figura \ref{fig:iot_diagram}.
 
 Le seguente sezione di questo capitolo introdurrà il progetto stesso (denominato SimSim) che poi verrà dettagliato nei prossimi capitoli.
@@ -178,6 +230,39 @@ Nelle figure \ref{fig:usecase} e \ref{fig:flowchart} si possono trovare rispetti
 \chapter{Sviluppo del sistema embedded}
 \label{cap2}
 %
+
+\lstset{
+	language=C++,
+	basicstyle=\ttfamily\footnotesize\color{darkgray},
+	keywordstyle=\color{cyan}\ttfamily,
+	stringstyle=\color{mymauve}\ttfamily,
+	commentstyle=\color{mygreen}\ttfamily,
+	morecomment=[l][\color{magenta}]{\#},
+	tabsize=2,
+	numbers=left,                  
+	numbersep=5pt,                   
+	numberstyle=\tiny\color{mygray},
+	breaklines=true,
+	backgroundcolor=\color{white},
+	showstringspaces=false,
+	frame=single,
+	extendedchars=true,
+	morekeywords=
+	{
+		boolean,
+		RCSwitch,
+		Servo,
+		Serial,
+		LiquidCrystal\_PCF8574,
+		Wire,
+		byte,
+		WiFi,
+		String,
+		HTTPClient,
+		SoftwareSerial,
+		JSON
+	}
+}
 
 In questo capitolo vengono dettagliati i dispositivi hardware utilizzati all'interno del sistema embedded. Uno schema completo del circuito elettrico si trova nella Figura \ref{fig:schematics}.
 
@@ -275,8 +360,9 @@ L'orologio può essere programmato con la data e l'ora corrente direttamente con
 Ci sono due principali tipi di tecnologie per i telecomandi: a raggi infrarossi o a radio-frequenza (RF).
 La tecnologia a raggi infrarossi è quella più utilizzata ed è usata da tanti dispositivi elettronici (un esempio molto comune è il telecomando della TV). In questo caso trasmettitore e ricevitore devono essere messi faccia-a-faccia e non troppo distanti tra di loro, perciò non è il caso di usare questa tecnologia nel progetto (non si potrebbe, ad esempio, aprire la porta stando dietro ad un muro).
 
-La tecnologia scelta è quindi quella a radio-frequenza, in cui trasmettitore e ricevitore possono comunicare anche se sono messi in camere diverse. Il dispositivo scelto (MX-05V/XD-RF-5V, Figura \ref{fig:rx_tx_module}) è un modulo composto da trasmettitore e ricevitore in radio-frequenza a 433 MHz (\url{https://sites.google.com/site/summerfuelrobots/arduino-sensor-tutorials/rf-wireless-transmitter-receiver-module-433mhz-for-arduino}). Il trasmettitore è stato utilizzato soltanto per programmare i telecomandi dell'azienda con i codici voluti grazie alla loro funzione di clonazione (codice sottostante).
-\begin{lstlisting}
+La tecnologia scelta è quindi quella a radio-frequenza, in cui trasmettitore e ricevitore possono comunicare anche se sono messi in camere diverse. Il dispositivo scelto (MX-05V/XD-RF-5V, Figura \ref{fig:rx_tx_module}) è un modulo composto da trasmettitore e ricevitore in radio-frequenza a 433 MHz (\url{https://sites.google.com/site/summerfuelrobots/arduino-sensor-tutorials/rf-wireless-transmitter-receiver-module-433mhz-for-arduino}). Il trasmettitore è stato utilizzato soltanto per programmare i telecomandi dell'azienda con i codici voluti grazie alla loro funzione di clonazione (codice nel Listato \ref{lst:trasm}).
+
+\begin{lstlisting}[caption={L'Arduino utilizza il trasmettitore per trasmettere i codici clonati dai telecomandi.}, label={lst:trasm}]
 #include <RCSwitch.h>
 
 int i = 0;
@@ -292,7 +378,7 @@ void setup() {
 
 void loop() {
 	i = 0;
-		while ( i<4) {
+		while (i < 4) {
 		mySwitch.send(code);
 		i++;
 		delay(400);
@@ -300,7 +386,6 @@ void loop() {
 	delay(3000);
 }
 \end{lstlisting}
-
 
 Il ricevitore, invece, è sempre collegato all'Arduino (Figura \ref{fig:rf_uno}) e riesce a ricevere i segnali mandati dai telecomandi anche da qualche decine di metri di distanza. Se il codice che viene mandato dal telecomando è corretto allora l'Arduino lo risconosce e apre la porta, altrimenti fa finta di niente. 
 
@@ -380,9 +465,9 @@ Generalmente, nel caso dei servomotori, si ha un periodo totale \textit{T} = 20 
 \end{itemize}
 
 
-Controllare un servomotore con l'Arduino è in realtà semplice perché esiste una libreria (\url{https://www.arduino.cc/en/reference/servo}) che ne facilita il lavoro: basta pensare in gradi. Nella Figura \ref{fig:servo_uno} viene fatto vedere un esempio di collegamento tra il servo e l'Arduino e il codice per controllarlo si può trovare sotto.
+Controllare un servomotore con l'Arduino è in realtà semplice perché esiste una libreria (\url{https://www.arduino.cc/en/reference/servo}) che ne facilita il lavoro: basta pensare in gradi. Nella Figura \ref{fig:servo_uno} viene fatto vedere un esempio di collegamento tra il servo e l'Arduino e un esempio di codice per controllarlo si trova nel Listato \ref{lst:servo}.
 
-\begin{lstlisting}
+\begin{lstlisting}[caption={Esempio di codice per controllare il servomotore: inanzittutto il servo viene collegato al pin 9 dell'Arduino e viene fatto ruotare di 180 gradi da una parte; dopo 5 secondi viene fatto ruotare di 180 gradi dalla parte opposta. }, label={lst:servo}]
 #include <Servo.h>
 
 Servo myservo;
@@ -397,8 +482,8 @@ void loop() {
 		myservo.write(pos);				 
 		delay(15);                      
 	}
-	
-	for (pos = 1800; pos >= 0; pos -= 1) {  
+	delay(5000);
+	for (pos = 180; pos >= 0; pos -= 1) {  
 		myservo.write(pos);				   
 		delay(15);                        
 	}
@@ -432,9 +517,9 @@ La tecnologia RFID si diversifica anche nella frequenza utilizzata e trova utili
 \end{figure}
 
 Il lettore RFID utilizzato nel progetto è il MFRC522 illustrato nella Figura \ref{fig:mfrc522} (\url{https://www.nxp.com/docs/en/data-sheet/MFRC522.pdf}). Esso opera su una frequenza di 13.56 MHz ed è in grado di comunicare con tag che si conformano allo standard ISO/IEC 14443 A/MIFARE. Implementa vari protocolli di comunicazione (SPI, Serial UART, I$^2$C) ma è stata sviluppata solo una libreria di Arduino (\url{https://github.com/miguelbalboa/rfid}) basata sul protocollo SPI (si veda la sezione \ref{sec:spi} \textquotedblleft{} SPI \textquotedblright{}).
-Nella Figura \ref{fig:rfid_uno} si trova il circuito per collegare il lettore RFID con l'UNO e un esempio di codice di Arduino per leggere i tag si trova sotto.
+Nella Figura \ref{fig:rfid_uno} si trova il circuito per collegare il lettore RFID con l'UNO e un esempio di codice di Arduino per leggere i tag si trova nel Listato \ref{lst:rfid}
 
-\begin{lstlisting}
+\begin{lstlisting}[caption={Procedura per leggere i tag. I tag vengono letti un byte alla volta e poi vengono concatenati in una stringa.}, label={lst:rfid}]
 boolean rfidCardRead(void) {
 	if ( !rfid.PICC_IsNewCardPresent() ) return false;
 	if ( !rfid.PICC_ReadCardSerial() ) return false;
@@ -468,9 +553,9 @@ e mandarli all'LCD.
 	\label{fig:16x2}
 \end{figure}
 
-Il problema principale dell'LCD 16x2, come si può vedere nella Tabella \ref{tab:lcd_pinout}, è il numero di pin necessari da collegare (e la pazienza per farlo) all'Arduino per poter farlo funzionare correttamente. Questo significa che, siccome l'Arduino ha un numero limitato di pin (13 digitali e 6 analogici), essi potrebbero non bastare per un progetto di dimensioni più grandi. Fortunatamente c'è una soluzione: I$^2$C (si veda la sezione \ref{sec:i2c} \textquotedblleft{} I$^2$C \textquotedblright{}). Esiste un chip che rende possibile la riduzione del numero di pin utilizzati a 2 (SDA e SCL) cambiando l'interfaccia parallela del controller in una seriale. Questo chip si chiama PCF8574 I/O Expander ed è definito come un backpack (è letteralmente uno zaino che si salda sopra l'LCD) e permette appunto all'LCD e all'Arduino di comunicare utilizzando il protocollo I$^2$C. Per utilizzarlo con Arduino esiste già una libreria che si chiama LiquidCrystal\_PCF8574 (\url{https://platformio.org/lib/show/1165/LiquidCrystal_PCF8574/installation}) che sfrutta la libreria Wire (\url{https://www.arduino.cc/en/Reference/Wire}) per implementare alcune funzioni utili al programmatore. Esempio di codice per utilizzare il LCD 16x2 con la libreria LiquidCrystal\_PCF8574:
+Il problema principale dell'LCD 16x2, come si può vedere nella Tabella \ref{tab:lcd_pinout}, è il numero di pin necessari da collegare (e la pazienza per farlo) all'Arduino per poter farlo funzionare correttamente. Questo significa che, siccome l'Arduino ha un numero limitato di pin (13 digitali e 6 analogici), essi potrebbero non bastare per un progetto di dimensioni più grandi. Fortunatamente c'è una soluzione: I$^2$C (si veda la sezione \ref{sec:i2c} \textquotedblleft{} I$^2$C \textquotedblright{}). Esiste un chip che rende possibile la riduzione del numero di pin utilizzati a 2 (SDA e SCL) cambiando l'interfaccia parallela del controller in una seriale. Questo chip si chiama PCF8574 I/O Expander ed è definito come un backpack (è letteralmente uno zaino che si salda sopra l'LCD) e permette appunto all'LCD e all'Arduino di comunicare utilizzando il protocollo I$^2$C. In Arduino si può utilizzare una libreria già esistente chiamata LiquidCrystal\_PCF8574 (\url{https://platformio.org/lib/show/1165/LiquidCrystal_PCF8574/installation}) che sfrutta la libreria Wire (\url{https://www.arduino.cc/en/Reference/Wire}) per implementare alcune funzioni utili al programmatore. Esempio di codice nel Listato \ref{lst:lcd}:
 
-\begin{lstlisting}
+\begin{lstlisting}[caption={L'Arduino inizializza la comunicazione con l'LCD tramite il protocollo I$^2$C e chiama la funzione lcdHomeMode() che semplicemente spegne la retroilluminazione e pulisce il testo.}, label={lst:lcd}]
 LiquidCrystal_PCF8574 lcd(lcdAddr); // lcdAddr = 0x27
 
 void lcdSetup(void) {
@@ -539,8 +624,8 @@ void lcdHomeMode(void) {
 	\label{fig:keypad_both}
 \end{figure}
 
-I tastierini sono dei dispositivi di input ampiamente utilizzati per dare la possibilità alle persone di interagire con un sistema (e.g$.$ inserire una password, controllare un robot ecc.). Normalmente i tasti sono disposti in un formato a matrice (in questo caso 4x4, ovvero 16 pulsanti) e permettono ad un microcontrollore di capire facilmente quale tasto è stato premuto in base alle linee che si attivano: nella Figura \ref{fig:keypad_both} si può facilmente vedere che premendo il pulsante \textquotedblleft{} 2 \textquotedblright{} vengono attivate le linee \textquotedblleft{} R0 \textquotedblright{} e \textquotedblleft{} C1 \textquotedblright{} e il microcontrollore, grazie a come è stato configurato, è in grado di dire che quel pulsante specifico è stato premuto. Segue un esempio di configurazione in Arduino del tastierino (in questo caso non viene utilizzata l'ultima colonna con le lettere): 
-\begin{lstlisting}
+I tastierini sono dei dispositivi di input ampiamente utilizzati per dare la possibilità alle persone di interagire con un sistema (e.g$.$ inserire una password, controllare un robot ecc.). Normalmente i tasti sono disposti in un formato a matrice (in questo caso 4x4, ovvero 16 pulsanti) e permettono ad un microcontrollore di capire facilmente quale tasto è stato premuto in base alle linee che si attivano: nella Figura \ref{fig:keypad_both} si può facilmente vedere che premendo il pulsante \textquotedblleft{} 2 \textquotedblright{} vengono attivate le linee \textquotedblleft{} R0 \textquotedblright{} e \textquotedblleft{} C1 \textquotedblright{} e il microcontrollore, grazie a come è stato configurato, è in grado di dire che quel pulsante specifico è stato premuto. Un esempio di configurazione in Arduino del tastierino si può trovare nel Listato \ref{lst:keypad}. 
+\begin{lstlisting}[caption={Configurazione dei pin del tastierino. In questo caso non viene utilizzata l'ultima colonna con le lettere.}, label={lst:keypad}]
 const byte keypadRows = 4;   // quattro righe
 const byte keypadCols = 3;  // tre colonne
 const byte keypadRowPins[keypadRows] = {5, 4, 3, 15}; // 15 = A1
@@ -627,9 +712,9 @@ Il circuito si può trovare nella Figura \ref{fig:esp_uno}.
 \end{figure}
 
 
-Il dispositivo viene pre-programmato con il firmware AT  (\url{https://www.electrodragon.com/w/ESP8266\_AT-Command\_firmware}) ma è possibile programmarlo anche con codice proprio (vedere la Tabella \ref{tab:esp01_modes} per le modalità di funzionamento) utilizzando l'IDE di Arduino. Segue una parte del codice caricato sull'ESP-01:
+Il dispositivo viene pre-programmato con il firmware AT  (\url{https://www.electrodragon.com/w/ESP8266\_AT-Command\_firmware}) ma è possibile programmarlo anche con il codice proprio (vedere la Tabella \ref{tab:esp01_modes} per le modalità di funzionamento) utilizzando l'IDE di Arduino. Un esempio si può trovare nel Listato \ref{lst:esp01_setup}:
 
-\begin{lstlisting}
+\begin{lstlisting}[caption={Riprogrammazione dell'ESP-01 con codice proprio. All'accensione, il dispositivo non fa altro che connettersi alla rete WiFi locale. Per poter fare ciò, è stata utilizzata una libreria molto bene documentata (\url{https://arduino-esp8266.readthedocs.io/en/latest/esp8266wifi/readme.html})}, label={lst:esp01_setup}]
 #include <ESP8266WiFi.h>
 #include <ESP8266HTTPClient.h>
 #include "wifi_secrets.h"
@@ -637,7 +722,7 @@ Il dispositivo viene pre-programmato con il firmware AT  (\url{https://www.elect
 const char* ssid = SECRET_SSID;
 const char* password = SECRET_PASS;
 
-void setup () {
+void setup() {
 
 	Serial.begin(9600);
 	WiFi.begin(ssid, password);
@@ -649,9 +734,8 @@ void setup () {
 	Serial.println("connected");
 }
 \end{lstlisting}
-Come si può notare, all'accensione non fa altro che connettersi alla rete WiFi locale. La libreria utilizzata è molto bene documentata e si trova a \url{https://arduino-esp8266.readthedocs.io/en/latest/esp8266wifi/readme.html}.
-Dopo aver effettuato la connessione, l'ESP-01 si mette in ascolto sulla porta seriale per dati in arrivo dall'Arduino per poi eseguire varie funzioni in base alla richiesta:
-\begin{lstlisting}
+Dopo aver effettuato la connessione, l'ESP-01 si mette in ascolto sulla porta seriale per dati in arrivo dall'Arduino per poi eseguire varie funzioni in base alla richiesta (Listato \ref{lst:esp01_listen}).
+\begin{lstlisting}[caption={L'ESP-01 si mette in ascolto sulla porta seriale collegata all'Arduino. Esso chiama la funzione corretta in base al formato della stringa ricevuta.}, label={lst:esp01_listen}]
 void loop() {
 	if ( WiFi.status() == WL_CONNECTED ) {
 		if ( Serial.available() ) {
@@ -681,8 +765,8 @@ void loop() {
 L'Arduino è programmato per mandare 2 tipi di richieste:
 
 \begin{itemize}
-	\item \textquotedblleft{} check \textquotedblright{} per quando deve inoltrare all'ESP-01 il codice del tag per la verifica:
-\begin{lstlisting}
+	\item \textquotedblleft{} check \textquotedblright{} per quando deve inoltrare all'ESP-01 il codice del tag per la verifica (Listato \ref{lst:uno_checkCardSerial})
+\begin{lstlisting}[caption={L'Arduino manda all'ESP-01 il seriale della tessera in formato JSON e aspetta la risposta con lo status code. Se statusCode = 200 allora mette la variabile allowed a \textquotedblleft{} true \textquotedblright{} (questo pezzo non è presentato per motivi di lunghezza). La funzione printBodyToESP si può vedere nel Listato \ref{lst:uno_printBodyToESP} }, label={lst:uno_checkCardSerial}]
 boolean checkCardSerial(String serial) {
 	boolean allowed = false;
 	String bodyJSON = "check{\"seriale\":\"" + serial + "\"}";
@@ -690,8 +774,8 @@ boolean checkCardSerial(String serial) {
 	...
 }
 \end{lstlisting}
-	\item \textquotedblleft{} log \textquotedblright{} per quando deve inoltrare all'ESP-01 un log:
-\begin{lstlisting}
+	\item \textquotedblleft{} log \textquotedblright{} per quando deve inoltrare all'ESP-01 un log (Listato \ref{lst:uno_sendLog})
+\begin{lstlisting}[caption={L'Arduino manda all'ESP-01 il log in formato JSON e aspetta la risposta con lo status code. Se statusCode = 200 allora scrive un messagio di successo, altrimenti stampa un messaggio d'errore. La funzione printBodyToESP si può vedere nel Listato \ref{lst:uno_printBodyToESP}.}, label={lst:uno_sendLog}]
 void sendLog(String tipo) {
 	String date = getCurrentFormattedDate();
 	String bodyJSON = "log{\"data\":\"";
@@ -703,10 +787,11 @@ void sendLog(String tipo) {
 }
 \end{lstlisting}
 \end{itemize}
+
 In base alla richiesta vengono attivate 2 funzioni diverse:
 \begin{itemize}
-	\item una per mandare la verifica del tag al server tramite una chiamata HTTP:
-\begin{lstlisting}
+	\item una per mandare la verifica del tag al server tramite una chiamata HTTP (Listato \ref{lst:esp_checkTessera}).
+\begin{lstlisting}[caption={L'ESP-01 manda una richiesta POST all'endpoint specificato. Il corpo della richiesta è in formato JSON e include il seriale e il tipo della tessera che si vuole verificare.}, label={lst:esp_checkTessera}]
 void checkTessera(String tesseraJSON) {
 	HTTPClient http;
 	http.begin("http://192.168.1.71:3000/api/tessere/check");
@@ -717,8 +802,8 @@ void checkTessera(String tesseraJSON) {
 	http.end();
 }
 \end{lstlisting}
-	\item una per mandare il log al server tramite una chiamata HTTP: 
-\begin{lstlisting}
+	\item una per mandare il log al server tramite una chiamata HTTP(Listato \ref{lst:esp_sendLog}).
+\begin{lstlisting}[caption={L'ESP-01 manda una richiesta POST all'endpoint specificato. Il corpo della richiesta è in formato JSON e rappresenta il log.}, label={lst:esp_sendLog}]
 void sendLog(String logJSON) {
 	HTTPClient http;
 	http.begin("http://192.168.1.71:3000/api/logs/add");
@@ -731,27 +816,50 @@ void sendLog(String logJSON) {
 \end{lstlisting}
 \end{itemize}
 
-\subsection{Comunicazione tra l'Arduino UNO e l'ESP-01 }
+\subsection{Comunicazione tra l'Arduino UNO e l'ESP-01 }\label{sec:softwareserial}
 
-L'Arduino UNO è programmato per comunicare con l'ESP-01 tramite SoftwareSerial (https://www.arduino.cc/en/Reference/SoftwareSerial), una libreria che replica, per via software, le funzionalità della comunicazione seriale hardware (sui pin 0 e 1) anche su altri pin digitali. Esempio di codice per il setup della comunicazione seriale tra l'ESP-01 e l'Arduino UNO utilizzando SoftwareSerial:
-\begin{lstlisting}
+L'Arduino UNO è programmato per comunicare con l'ESP-01 tramite SoftwareSerial (https://www.arduino.cc/en/Reference/SoftwareSerial), una libreria che replica, per via software, le funzionalità della comunicazione seriale hardware (sui pin 0 e 1) anche su altri pin digitali. Un esempio di codice per il setup della comunicazione seriale tra l'ESP-01 e l'Arduino UNO tramite SoftwareSerial si trova nel Listato \ref{lst:uno_ss_setup}
+
+\begin{lstlisting}[caption={Inizializzazione della comunicazione seriale tra Arduino UNO e ESP-01.}, label={lst:uno_ss_setup}]
 SoftwareSerial ESP(16, 17);
 
 void arduinoEspSerialSetup() {
 	ESP.begin(9600);
 }
 \end{lstlisting}
-Come si è visto precedentemente, l'Arduino inoltra all'ESP-01 delle stringhe che sono quasi in formato JSON: prima dell'oggetto JSON c'è un'altra stringa usata per identificare la funzione voluta (e.g$.$ \textquotedblleft{} check\{object\} \textquotedblright{} e \textquotedblleft{} log\{object\} \textquotedblright{}). L'ESP-01 poi filtra questi dettagli non più necessari e chiama la funzione richiesta. Viene presentata la sequenza degli eventi per la verifica del tag:
+Un esempio di utilizzo di SoftwareSerial si può trovare nel Listato (\ref{lst:uno_printBodyToESP}).
+
+\begin{lstlisting}[caption={La funzione printBodyToESP. Essa manda all'ESP-01 (tramite l'oggetto SoftwareSerial) la stringa ricevuta tra gli argomenti e poi aspetta per la risposta. Dopo aver ricevuto la risposta restituisce statusCode.}, label={lst:uno_printBodyToESP}]
+int printBodyToESP(String bodyJSON) {
+int statusCode;
+ESP.print(bodyJSON);
+delay(100);
+uint32_t lastMillis = millis();
+while (!ESP.available()) {
+// se passano 5 secondi senza risposta, break (per evitare loop)
+if (!checkTimeout(lastMillis)) break;
+}
+// adesso abbiamo lo status code
+statusCode = uint32_t(ESP.parseInt());
+return statusCode;
+}
+
+boolean checkTimeout(uint32_t lastMillis) {
+// espTimeoutInterval = 5000
+if ( (millis() - lastMillis) < espTimeoutInterval ) return true;
+else return false;
+}
+\end{lstlisting}
+
+Come si è visto precedentemente, l'Arduino inoltra all'ESP-01 delle stringhe che sono quasi in formato JSON: prima dell'oggetto JSON c'è un'altra stringa usata per identificare la funzione voluta (e.g$.$ \textquotedblleft{} check\{object\} \textquotedblright{} e \textquotedblleft{} log\{object\} \textquotedblright{}). L'ESP-01 poi filtra questi dettagli non più necessari e chiama la funzione richiesta.
+ Viene presentata la sequenza completa degli eventi per la verifica del tag:
 
 \begin{enumerate}
-	\item L'utente avvicina il tag al lettore RFID
-	\item L'Arduino legge il seriale del tag e chiama \textquotedblleft{} checkCardSerial(serial) \textquotedblright{}
-	\item Questa funzione manda un'oggetto in formato \textquotedblleft{} quasi-JSON \textquotedblright{} all'ESP-01
-	\item L'ESP-01 riceve questa stringa e filtra l'informazione non più necessaria
-	\item L'ESP-01 chiama la funzione richiesta (in questo caso \textquotedblleft{} checkTessera(tessera) \textquotedblright{})
-	\item La funzione eseguita manda l'oggetto JSON al server e aspetta una risposta con lo status code.
-	\item L'ESP-01 inoltra lo status code all'Arduino
-	\item L'Arduino prende una decisione un base allo Status Code: se 200 allora il tag è accettato e l'Arduino apre la porta, altrimenti viene rifiutato.
+	\item L'utente avvicina il tag al lettore RFID;
+	\item L'Arduino legge il seriale del tag e chiama \textquotedblleft{} checkCardSerial(serial) \textquotedblright{} (Listato \ref{lst:uno_checkCardSerial}). Questa funzione manda una stringa in formato \textquotedblleft{} quasi-JSON \textquotedblright{} all'ESP-01;
+	\item L'ESP-01 riceve questa stringa. Esso filtra l'informazione non più necessaria e chiama \textquotedblleft{} checkTessera(tessera) \textquotedblright{} (Listato \ref{lst:esp01_listen});
+	\item La funzione eseguita manda l'oggetto JSON al server e aspetta una risposta con lo status code. Dopo aver ricevuto la risposta, esso inoltra lo status code all'Arduino tramite la porta seriale (Listato \ref{lst:esp_checkTessera});
+	\item L'Arduino prende una decisione in base allo status code: se 200 allora il tag è accettato e apre la porta, altrimenti viene rifiutato.
 \end{enumerate}
 Come si può vedere dalla sequenza degli eventi, l'ESP-01 non è altro che un intermediario tra l'Arduino e il server.
 %
@@ -828,6 +936,22 @@ Anche se sembrano molto simili, ci sono alcune differenze importanti tra i due p
 \chapter{Sviluppo del sito web}
 \label{cap3}
 %
+
+\lstset{
+	language=Node,
+	backgroundcolor=\color{white},
+	extendedchars=true,
+	basicstyle=\footnotesize\ttfamily,
+	showstringspaces=false,
+	showspaces=false,
+	numbers=left,
+	numberstyle=\footnotesize,
+	numbersep=9pt,
+	tabsize=2,
+	breaklines=true,
+	showtabs=false,
+	captionpos=b
+}
 
 In questo capitolo vengono descritte le tecnologie e le scelte progettuali che hanno portato allo sviluppo dell'interfaccia grafica richiesta dai requisiti per la gestione del database dell'azienda (si veda la sezione \ref{sec:req} \textquotedblleft{} Requisiti del progetto \textquotedblright{}). Nella Figura \ref{fig:esempio_libro_soci} si può vedere un esempio della grafica creata per la gestione del libro soci.
 
@@ -912,7 +1036,8 @@ app.use(bodyParser.text());
 app.set('view engine', 'ejs');
 \end{lstlisting}
 Esempio di utilizzo nel lato client (il codice JavaScript all'interno della pagina HTML è racchiuso tra \textquotedblleft{} $<$\% \%$>$ \textquotedblright{} e l'oggetto \textquotedblleft{} tessere \textquotedblright{} è stato passato dal server in formato JSON):
-\begin{lstlisting}[language=HTML]
+
+\begin{lstlisting}[language=HTML, morekeywords={if, else}]
 <% for(var i=0; i<tessere.length; i++) { %>
 	<tr class="w3-black tessere-table-mobile">
 		<td><%= tessere[i].numero_tessera %></td>
@@ -965,7 +1090,7 @@ LogSchema.index( { '$**': 'text'}); // full-table search index
 
 /* 
  *	Tutte le stringhe vengono incluse nell'indice.
- *	Permette di fare le query in questo modo: 
+ *	Permette cercare l'intero database in questo modo: 
  *	Log.find( { $text: { $search: searchTerm }}) 
  */
 
@@ -973,7 +1098,7 @@ LogSchema.index( { '$**': 'text'}); // full-table search index
 module.exports = mongoose.model("Log", LogSchema);
 \end{lstlisting}
 	\item La vista corrisponde alla logica dell'\emph{User Interface} (UI) dell'applicazione. Rappresenta il modo in cui vengono presentati i dati all'utente. Come esempio viene esposta una parte del codice HTML della vista creata per presentare le tessere all'utente:
-\begin{lstlisting}
+\begin{lstlisting}[language=HTML, morekeywords={if, else}]
 <table class="w3-table w3-left w3-border w3-centered">
 	<thead>
 		<tr class="w3-white tessere-table-mobile w3-large">
@@ -1054,6 +1179,40 @@ schema.pre('save', function(next) {
 Come esempio, viene presentata la sequenza degli eventi per aggiungere un log (dopo un accesso con la tessera) all'interno del database e poi visualizzarlo sul sito:
 \begin{enumerate}[(I)]
 	\item L'ESP-01 manda una richiesta di aggiunta del log all'endpoint \emph{/api/logs/add} del server:
+	
+\lstset{
+	language=C++,
+	basicstyle=\ttfamily\footnotesize\color{darkgray},
+	keywordstyle=\color{cyan}\ttfamily,
+	stringstyle=\color{mymauve}\ttfamily,
+	commentstyle=\color{mygreen}\ttfamily,
+	morecomment=[l][\color{magenta}]{\#},
+	tabsize=2,
+	numbers=left,                  
+	numbersep=5pt,                   
+	numberstyle=\tiny\color{mygray},
+	breaklines=true,
+	backgroundcolor=\color{white},
+	showstringspaces=false,
+	frame=single,
+	extendedchars=true,
+	morekeywords=
+	{
+		boolean,
+		RCSwitch,
+		Servo,
+		Serial,
+		LiquidCrystal\_PCF8574,
+		Wire,
+		byte,
+		WiFi,
+		String,
+		HTTPClient,
+		SoftwareSerial,
+		JSON
+	}
+}
+
 \begin{lstlisting}
 void sendLog(String logJSON) {
 	HTTPClient http;
@@ -1066,6 +1225,23 @@ void sendLog(String logJSON) {
 }
 \end{lstlisting}
 	\item L'applicazione, dopo aver ricevuto una richiesta POST all'endpoint specificato precedentemente, chiama una funzione per gestire la richiesta:
+	
+\lstset{
+	language=Node,
+	backgroundcolor=\color{white},
+	extendedchars=true,
+	basicstyle=\footnotesize\ttfamily,
+	showstringspaces=false,
+	showspaces=false,
+	numbers=left,
+	numberstyle=\footnotesize,
+	numbersep=9pt,
+	tabsize=2,
+	breaklines=true,
+	showtabs=false,
+	captionpos=b
+}
+
 \begin{lstlisting}
 app.post('/api/logs/add', logs.addLog);
 \end{lstlisting}
@@ -1213,13 +1389,13 @@ I file HTML generati nel progetto hanno l'estensione EJS perchè vengono usati a
 \subsubsection*{CSS}
 %
 I documenti HTML sono stilizzati con il linguaggio di stile più diffuso al mondo chiamato \emph{Cascading Style Sheets} (CSS): esso descrive, attraverso delle regole, i modi in cui gli elementi di un documento devono essere presentati e animati nell'interfaccia grafica. Le regole possono essere scritte direttamente nel file HTML, ma ciò crea solo confusione ed è generalmente buona norma avere i file CSS separati e poi importati nel documento, così come segue:
-\begin{lstlisting}
+\begin{lstlisting}[language=HTML]
 <link rel="stylesheet" href="/css/w3.css">
 <link rel="stylesheet" href="/css/custom.css">
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 \end{lstlisting}
 Normalmente gli sviluppatori non scrivono le proprie regole (è un lavoro molto lungo e per fare una cosa bella serve tanta esperienza in web design) ma trovano dei template (esistono sia gratis che a pagamento) da utilizzare. In questo caso è stato utilizzato un template (\url{https://www.w3schools.com/w3css/tryw3css_templates_dark_portfolio.htm}) di W3.CSS (\url{https://www.w3schools.com/w3css/default.asp}) scelto dal tutor aziendale. W3.CSS è un framework moderno, semplice, veloce e gratis che supporta un design mobile-first che aiuta lo sviluppatore a creare siti web moderni e responsivi. Il vantaggio di un sito responsivo è il fatto che è stato progettato per rispondere automaticamente a tutti i tipi di dispositivi utilizzati per visualizzarlo (e.g. desktop, mobile, tablet). Questo approccio viene implementato sfruttando le caratteristiche delle \emph{media queries}:
-\begin{lstlisting}
+\begin{lstlisting}[morekeywords={ @media, max-width, px, width, height, !important}]
 @media (max-width:768px)
 {
 	.red-circle
@@ -1240,14 +1416,14 @@ Inoltre è stato utilizzato \emph{Font Awesome}, un toolkit di icone distribuito
 \subsubsection*{JavaScript}
 %
 JavaScript è un linguaggio di programmazione introdotto nel 1995 con lo scopo di aggiungere programmi all'interno di siti web sul browser Netscape Navigator. Il linguaggio è stato adottato da quasi tutti gli altri browser esistenti (è stato anche standardizzato sotto il nome di ECMAScript) e ha reso possibile avere applicazioni web moderne con cui un utente può interagire direttamente senza dover ricaricare la pagina\cite{eloquent_javascript}. È un linguaggio molto evoluto e studiato nel tempo e ora si definisce come un linguaggio di scripting client-side (ma non solo, come si è visto con Node.js) eseguito dai browser. Il codice JavaScript può essere scritto all'interno di qualsiasi documento, ma è buona norma avere i file con estensione .js separati e poi inclusi alla fine del documento (per far sì che tutti gli elementi vengano caricati dal browser), così come segue: 
-\begin{lstlisting}
+\begin{lstlisting}[language=HTML]
 <script type="text/javascript" src=/js/jquery-3.3.1.min.js></script>
 <script type="text/javascript" src=/js/forms.js></script>
 <script type="text/javascript" src=/js/buttons.js></script>
 <script type="text/javascript" src=/js/dettagliSoci.js></script>
 \end{lstlisting}
 JavaScript è un linguaggio che utilizza un singolo thread (organizza l'esecuzione in un'unica pila chiamata \emph{call stack}) e segue il paradigma della programmazione a eventi, perciò è possibile costruire un comportamento non bloccante. Il motore JavaScript crea una coda di eventi (che possono essere operazioni di I/O, richieste di rete, chiamate di WebWorker, funzioni inserite in timer ecc.) che, al verificarsi di un evento, possono modificare l'ordine di esecuzione sequenziale del codice. Si prenda come esempio una funzione che scrive \textquotedblleft{} Hello World \textquotedblright{} ogni 3 secondi: 
-\begin{lstlisting}
+\begin{lstlisting}[language=JavaScript, morekeywords={ alert }]
 function myFunction() {
 	setInterval(function() { 
 		alert("Hello World"); 
@@ -1272,7 +1448,8 @@ Un elemento molto importante di JavaScript di cui ne vale la pena parlare è la 
 	\item validazione istantanea dei form
 \end{itemize}
 Tutto ciò è possibile grazie all'utilizzo di un oggetto chiamato XMLHttpRequest che può comunicare con il server per mandare e ricevere dati in vari formati quali JSON, XML, HTML e file di testo in maniera asincrona. Un esempio che descrive l'utilizzo di AJAX dopo che l'utente preme il pulsante per cancellare un socio dal database:
-\begin{lstlisting}
+
+\begin{lstlisting}[language=JavaScript, morekeywords={ confirm, $, alert }]
 const rimuoviSocioButton = $(".w3-btn.w3-round.rimuoviSocioButton");
 
 rimuoviSocioButton.on('click', function(e) {
@@ -1305,10 +1482,10 @@ rimuoviSocioButton.on('click', function(e) {
 In seguito vengono descritti alcuni problemi affrontati durante lo sviluppo del progetto e le soluzioni adottate per superarli.
 
 %
-\subsection{Incompatibilità tra il sistema operativo del Raspberry Pi e le ultime versioni di MongoDB}
+\subsection{Incompatibilità tra Raspbian e le ultime versioni di MongoDB}
 %
-Durante lo sviluppo del progetto ho scoperto che Raspbian in realtà non è stato ancora aggiornato per essere un sistema operativo a 64 bit, perciò non poteva sfruttare al meglio l'architettura a 64 bit del Raspberry Pi 3B+.
-L'ultima versione di MongoDB che può essere installata sul sistema operativo Raspbian è v2.4 (rilasciato nel 2013) che ha alcuni problemi a connettersi con le ultime versioni di Node.js. Inoltre la versione di MongoDB installata su Raspbian è stata progettata per un'architettura a 32 bit, limitata, per motivi tecnici, a 2GB di dati\cite{mongodb_32bit_limitations}.
+Durante lo sviluppo del progetto ho scoperto che Raspbian, il sistema operativo progettato per il Raspberry Pi, in realtà non è stato ancora aggiornato per essere un sistema operativo a 64 bit, perciò non poteva sfruttare al meglio l'architettura a 64 bit del Raspberry Pi 3B+.
+L'ultima versione di MongoDB che può essere installata su Raspbian è v2.4 (rilasciato nel 2013) e ha alcuni problemi a connettersi con le ultime versioni di Node.js. Inoltre la versione di MongoDB installata su Raspbian è stata progettata per un'architettura a 32 bit, limitata, per motivi tecnici, a 2GB di dati\cite{mongodb_32bit_limitations}.
 Come soluzione a questo problema, è stato installato un sistema operativo chiamato openSUSE Tumbleweed (\url{https://software.opensuse.org/distributions/tumbleweed}) che funziona su architetture ARMv8 a 64 bit. Ci sono alcune inconvenienze tra cui la più notevole è la minore prestazione offerta dalla Raspberry Pi, però non ha creato grossi problemi e il server è abbastanza responsivo ai comandi. 
 
 %
@@ -1318,7 +1495,7 @@ Siccome non è stato sviluppato un sistema di login per il sito web (per questio
 
 
 %
-\subsection{Disattivazione delle tessere dei soci non più iscritti all'anno corrente}
+\subsection{Disattivazione delle tessere dei soci non più iscritti}
 %
 
 L'ingresso nello spazio di Yatta è regolato da un tesseramento. Ogni anno, a fine Gennaio, tutte le tessere che non sono state rinnovate vengono disattivate: questo significa che devono essere disattivate automaticamente anche nel database.
@@ -1347,7 +1524,7 @@ var j = schedule.scheduleJob(rule, function(){
 					tessera.stato="DISATTIVATA";
 					tessera.save( (err, tessera) => {
 						if (err) console.error(err);
-						else console.log(tessera.numero_tessera + " disattivata");
+						else console.log(tessera.numero_tessera + " bloccata");
 					});
 				}
 			}
